name:                ghc-simple
version:             0.1.0.0
synopsis:            Simplified interface to the GHC API.
-- description:         
homepage:            https://github.com/valderman/ghc-simple
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Language.Haskell.GHC.Simple,
    Language.Haskell.GHC.Simple.Impl
  other-modules:       
    Language.Haskell.GHC.Simple.Types
  other-extensions:
    CPP, PatternGuards, FlexibleInstances
  build-depends:
    ghc          >= 7.8,
    base         >=4.7 && <4.9,
    ghc-paths    >=0.1 && <0.2,
    data-default >=0.5 && <0.6
  hs-source-dirs:
    src
  default-language:
    Haskell2010
               