name:                ghc-simple
version:             0.2
synopsis:            Simplified interface to the GHC API.
description:         The GHC API is a great tool for working with Haskell code.
                     Unfortunately, it's also fairly opaque and hard to get
                     started with. This library abstracts away the intricacies
                     of working with the GHC API, giving a general, no-nonsense
                     way to extract highly optimized (or not, depending on your
                     use case) Core, STG, custom intermediate code, and other
                     information from Haskell code.
homepage:            https://github.com/valderman/ghc-simple
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
copyright:           (c) 2015 Anton Ekblad
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/valderman/ghc-simple.git

library
  exposed-modules:
    Language.Haskell.GHC.Simple,
    Language.Haskell.GHC.Simple.Impl
    Language.Haskell.GHC.Simple.PrimIface
    Language.Haskell.GHC.Simple.Types
  other-extensions:
    CPP, PatternGuards, FlexibleInstances
  build-depends:
    ghc          >=7.8  && <7.11,
    base         >=4.7  && <4.9,
    ghc-paths    >=0.1  && <0.2,
    directory    >=1.2  && <1.3,
    filepath     >=1.3  && <1.5,
    bytestring   >=0.10 && <0.11,
    binary       >=0.6  && <0.8
  hs-source-dirs:
    src
  default-language:
    Haskell2010
               
